--- a/ML_Assign_Normalize.ipynb
+++ b/ML_Assign_Normalize.ipynb
@@ -138,6 +138,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -154,6 +161,13 @@
     "from numpy.random import seed\n",
     "from scipy.stats import shapiro\n",
     "from numpy.random import randn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Different Dataset to compare the different techniques of normalization"
    ]
   },
   {
