--- a/ML_Assign_Normalize.ipynb
+++ b/ML_Assign_Normalize.ipynb
@@ -60,6 +60,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simple features scaling\n",
+    "\n",
+    "dim['depth'] = (dim['depth']- dim['depth'].min()) / ( dim['depth'].max()- dim['depth'].min())\n",
+    "dim.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,6 +92,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Feature Clipping\n",
+    "\n",
+    "dim['depth'] = dim['depth']/dim['depth'].max()\n",
+    "dim['table'] = dim['table']/dim['table'].max()\n",
+    "dim.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Feature Clipping\n",
     "\n",
@@ -110,6 +135,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Log Scaling\n",
+    "\n",
+    "ship['depth'] = np.log(ship['depth'])\n",
+    "dim.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,7 +172,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Z score (standard score)\n",
+    "\n",
+    "dim['depth'] = (dim['depth']- dim['depth'].mean())/dim['depth'].std()\n",
+    "dim.head()"
+   ]
   },
   {
    "cell_type": "markdown",
