--- a/ML_T_test_Normality.ipynb
+++ b/ML_T_test_Normality.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ship[\"age\"] = ship['age'].dropna"
+    "ship.dropna(subset=['age'],axis=0,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,14 +247,14 @@
        "class            0\n",
        "who              0\n",
        "adult_male       0\n",
-       "deck           688\n",
+       "deck           530\n",
        "embark_town      2\n",
        "alive            0\n",
        "alone            0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>male</td>\n",
-       "      <td>&lt;bound method Series.dropna of 0      22.0\\n1 ...</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7.25</td>\n",
@@ -330,17 +330,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   survived  pclass   sex                                                age  \\\n",
-       "0         0       3  male  <bound method Series.dropna of 0      22.0\\n1 ...   \n",
+       "   survived  pclass   sex   age  sibsp  parch  fare embarked  class  who  \\\n",
+       "0         0       3  male  22.0      1      0  7.25        S  Third  man   \n",
        "\n",
-       "   sibsp  parch  fare embarked  class  who  adult_male deck  embark_town  \\\n",
-       "0      1      0  7.25        S  Third  man        True  NaN  Southampton   \n",
-       "\n",
-       "  alive  alone  \n",
-       "0    no  False  "
+       "   adult_male deck  embark_town alive  alone  \n",
+       "0        True  NaN  Southampton    no  False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,16 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = ship[['age','fare','sex']] "
+    "df1 = ship[['age','fare','sex']] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,31 +389,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>&lt;bound method Series.dropna of 0      22.0\\n1 ...</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>7.2500</td>\n",
        "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>&lt;bound method Series.dropna of 0      22.0\\n1 ...</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>71.2833</td>\n",
        "      <td>female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>&lt;bound method Series.dropna of 0      22.0\\n1 ...</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>7.9250</td>\n",
        "      <td>female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>&lt;bound method Series.dropna of 0      22.0\\n1 ...</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>53.1000</td>\n",
        "      <td>female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>&lt;bound method Series.dropna of 0      22.0\\n1 ...</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>8.0500</td>\n",
        "      <td>male</td>\n",
        "    </tr>\n",
@@ -425,21 +422,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                 age     fare     sex\n",
-       "0  <bound method Series.dropna of 0      22.0\\n1 ...   7.2500    male\n",
-       "1  <bound method Series.dropna of 0      22.0\\n1 ...  71.2833  female\n",
-       "2  <bound method Series.dropna of 0      22.0\\n1 ...   7.9250  female\n",
-       "3  <bound method Series.dropna of 0      22.0\\n1 ...  53.1000  female\n",
-       "4  <bound method Series.dropna of 0      22.0\\n1 ...   8.0500    male"
+       "    age     fare     sex\n",
+       "0  22.0   7.2500    male\n",
+       "1  38.0  71.2833  female\n",
+       "2  26.0   7.9250  female\n",
+       "3  35.0  53.1000  female\n",
+       "4  35.0   8.0500    male"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "df1.head(5)"
    ]
   }
  ],
