--- a/ML_Linear_Regression_3DGraph.ipynb
+++ b/ML_Linear_Regression_3DGraph.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Participants\n",
+    "# Participant\n",
     "\n",
     "Title = \"Scholar\"\n",
     "\n",
@@ -1649,10 +1649,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "a7dedf4eff3048740122ebb4d2814c565cf9b2b6a4e4af8875eef51e631449d8"
+   "hash": "5ae58900cfbb8c43ab3495913814b7cf26024f51651a94ce8bf64d6111688e8d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1666,7 +1666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
