--- a/ML_Normalization_2.ipynb
+++ b/ML_Normalization_2.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Participants\n",
+    "# Participant\n",
     "\n",
     "Title = \"Scholar\"\n",
     "\n",
