--- a/ML_Data_Normalize.ipynb
+++ b/ML_Data_Normalize.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,18 +115,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stat=0.096, p=0.908\n",
+      "Probably the same distribution\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of the Analysis of Variance Test (ANOVA)\n",
+    "from scipy.stats import f_oneway\n",
+    "data1 = [0.873, 2.817, 0.121, -0.945, -0.055, -1.436, 0.360, -1.478, -1.637, -1.869]\n",
+    "data2 = [1.142, -0.432, -0.938, -0.729, -0.846, -0.157, 0.500, 1.183, -1.075, -0.169]\n",
+    "data3 = [-0.208, 0.696, 0.928, -1.148, -0.213, 0.229, 0.137, 0.269, -0.870, -1.204]\n",
+    "stat, p = f_oneway(data1, data2, data3)\n",
+    "print('stat=%.3f, p=%.3f' % (stat, p))\n",
+    "if p > 0.05:\n",
+    "  print('Probably the same distribution')\n",
+    "else:\n",
+    "    print('Probably different distributions')\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a7dedf4eff3048740122ebb4d2814c565cf9b2b6a4e4af8875eef51e631449d8"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('base': conda)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -140,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
